@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Bug Fixes]
+  - Re-added the file existence check that was removed in v0.1.3.
 
 v0.2.0    2023-06-15 19:31:17+01:00 Europe/London
   [Enhancements]
